# pocket-pet-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  HERMES.md  LICENSE  README.md  SECURITY.md  agent.tech.md  design-qa.md  eslint.config.mjs  idea.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  research_proposal.yml
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/research/: page.tsx
benchmark-results/fpga-sim/: reference.json
benchmark-results/reference/: ml-reference.csv  ml-reference.json
docs/: architecture.md  brand.md  fpga-guide.md  ml-validation-guide.md  prototype.md  research-guide.md  roadmap.md  stages.md
experiments/ml/: README.md
fpga/: __init__.py  reference_model.py
fpga/rtl/: ternary_mvu.sv
notebooks/: ternary_accelerator.ipynb
research/papers/: MANIFEST.csv  README.md
research/whitepaper/: README.md  assumptions.md
scripts/: benchmark.py  generate_design_qa_board.py  generate_site_evidence_chart.py  generate_whitepaper.py  run_fpga_simulation.py  run_ml_experiments.py
src/pocket_pet/: __init__.py  cache.py  config.py  model.py  quantization.py
tests/: rendered-html.test.mjs
tests/fpga/: test_reference.py
tests/python/: test_cache.py  test_ml_invariants.py  test_model.py  test_quantization.py
