[project]
name = "pocket-pet"
version = "0.1.0"
description = "Executable ternary transformer prototype for a frozen-model personal AI accelerator"
readme = "docs/prototype.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.0",
  "torch>=2.6",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29",
  "matplotlib>=3.9",
  "nbclient>=0.10",
  "nbconvert>=7.16",
  "nbformat>=5.10",
  "pytest>=8.3",
  "reportlab>=4.2",
  "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocket_pet", "fpga"]

[tool.pytest.ini_options]
testpaths = ["tests/python", "tests/fpga"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_whitepaper.py" = ["E501", "B007"]
